# CarpoolSim

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  setup.py
carpoolsim/: basic_settings.py  config.py  network_prepare.py  prepare_input.py
carpoolsim/carpool/: sim.py  trip_cluster.py  trip_cluster_abstract.py  trip_cluster_basic.py  trip_cluster_dc.py  trip_cluster_pnr.py  trip_cluster_with_time.py  trip_demands.py  trip_filters.py
carpoolsim/carpool/util/: evaluator.py  filters_dc.py  filters_pnr.py  io.py  mat_operations.py  network_search.py  plotter.py  (+3 more)
carpoolsim/carpool_solver/: bipartite_solver.py
carpoolsim/config/: config.py
carpoolsim/database/: prepare_database.py  query_database.py
carpoolsim/dataclass/: __init__.py  network_links.py  parking_lots.py  taz.py  traffic_network.py  traffic_network_link.py  traffic_network_node.py  travel_demands.py  trip_demands.py  utils.py
carpoolsim/visualization/: carpool_viz.py  carpool_viz_seq.py
notebooks/: Prepare Path Retention Database.ipynb  prepare_db_path_retention.ipynb  step0_prepare_data_inputs.ipynb  step0_prepare_standardize_data.ipynb  step0_standardize_data.ipynb  step1_GT_survey_preprocess.ipynb  step1_prepare_path_retention_database.ipynb  step2_prepare_traffic_demands.ipynb  step2_run_carpoolsim.ipynb  step3_run_carpoolsim.ipynb  test.ipynb
tests/: test_load_example.py
tests/carpool/: test_mat_operations.py  test_trip_cluster_basic.py  test_trip_cluster_dc.py  test_trip_cluster_pnr.py  test_trip_fliters.py
tests/database/: test_query_database.py
tests/dataclass/: test_utils.py
(+1 files in other folders)
